fix: properly aligned about page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,9 +66,14 @@
 
 body {
   /* background: var(--background); */
+  color: var(--foreground);
+  font-family: Arial, Helvetica, sans-serif;
   background-color: #0B1628;
   overflow-x: hidden;
+  /* opacity: 0.2; */
+  background-size: 60px 60px;
 }
+
 
 html {
   scroll-behavior: smooth;
